# Aliyun-OSS-SignServer-ws

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  aliyun-oss-cpp-sdk-test.sln  config.json  main.cpp  vcpkg.json
.github/workflows/: cmake-linux.yml  cmake-multi-platform.yml  cmake-windows.yml
aliyun-oss-cpp-sdk-test/: aliyun-oss-cpp-sdk-test.cpp  aliyun-oss-cpp-sdk-test.vcxproj  aliyun-oss-cpp-sdk-test.vcxproj.filters
src/: main.cpp  main.h
